Fixed contrast color

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
+  color: #5564eb;
   margin-top: 1rem;
 }
 
@@ -119,7 +119,7 @@ main {
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 1.2rem;
-  color: #7f8cff;
+  color: #4d5bd9;
 }
 
 /* this section are for the social links */
@@ -242,7 +242,7 @@ main {
   text-align: center;
   width: 20%;
   font: 1rem;
-  color: #6070ff;
+  color: #5564eb;
 }
 
 .program-language-javascript {
@@ -253,12 +253,12 @@ main {
   width: 40%;
   height: 2rem;
   font: 15rem;
-  color: #6070ff;
+  color: #5564eb;
 }
 
 .call-to-action {
   margin-top: 1.5rem;
-  border: 2px solid #6070ff;
+  border: 2px solid #5564eb;
   border-radius: 8px;
   color: #396df2;
   text-align: center;
@@ -272,7 +272,7 @@ main {
 
 .call-to-action-resume {
   margin-top: 1.5rem;
-  border: 2px solid #6070ff;
+  border: 2px solid #5564eb;
   border-radius: 8px;
   color: #396df2;
   text-align: center;
@@ -285,7 +285,7 @@ main {
 }
 
 button:hover {
-  background-color: #6070ff;
+  background-color: #5564eb;
   color: #fff;
   box-shadow: 0 8px 16px 0 #dfe1e6;
 }
@@ -380,7 +380,7 @@ hr {
 
 .contact-container {
   background: url('./assets/background-img/contact-form-shapes-mobile.svg') 100% 21px no-repeat;
-  background-color: #6070ff;
+  background-color: #5564eb;
   min-height: 779px;
   border-top-left-radius: 150px;
   object-fit: cover;
@@ -456,9 +456,9 @@ textarea {
 
 .getInTouch {
   margin-top: 1rem;
-  border: 2px solid #6070ff;
+  border: 2px solid #5564eb;
   border-radius: 8px;
-  color: #6070ff;
+  color: #5564eb;
   text-align: center;
   justify-content: center;
   padding: 1rem;
@@ -474,9 +474,9 @@ textarea {
 @media only screen and (min-width: 425px) {
   .getInTouch {
     margin-top: 1rem;
-    border: 2px solid #6070ff;
+    border: 2px solid #5564eb;
     border-radius: 8px;
-    color: #6070ff;
+    color: #5564eb;
     text-align: center;
     justify-content: center;
     padding: 1rem;
@@ -604,7 +604,7 @@ textarea {
     text-align: center;
     width: 10rem;
     font: 0.8rem;
-    color: #6070ff;
+    color: #5564eb;
   }
 
   .program-language-javascript {
@@ -615,7 +615,7 @@ textarea {
     width: 20rem;
     height: 2rem;
     font: 0.8rem;
-    color: #6070ff;
+    color: #5564eb;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 0.2rem;
@@ -734,7 +734,7 @@ textarea {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 1.2rem;
-    color: #7f8cff;
+    color: #4d5bd9;
     margin-left: 1rem;
   }
 
